# sempervirens

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.sh  tests_1000x1000.sh
metrics/: metrics_1000x1000s_0_001fpr_2023-02-27_19:56.csv  metrics_1000x1000s_0_001fpr_2023-02-28_20:57.csv  metrics_1000x1000s_0_001fpr_2023-03-01_09:36.csv  metrics_1000x1000s_0_01fpr_2023-02-16_22:23.csv  metrics_1000x1000s_0_01fpr_2023-02-27_20:25.csv  metrics_1000x1000s_0_01fpr_2023-02-28_21:17.csv  metrics_1000x1000s_0_01fpr_2023-03-01_09:57.csv  metrics_1000x1000s_0_1fpr_2023-02-16_23:02.csv  metrics_1000x1000s_0_1fpr_2023-02-27_20:59.csv  metrics_1000x1000s_0_1fpr_2023-02-28_21:42.csv  metrics_1000x1000s_0_1fpr_2023-03-01_10:21.csv  metrics_1000x300s_0_001fpr_2023-02-27_19:03.csv  metrics_1000x300s_0_001fpr_2023-02-28_20:19.csv  metrics_1000x300s_0_001fpr_2023-03-01_08:57.csv  metrics_300x1000s_0_001fpr_2023-02-27_19:06.csv  metrics_300x1000s_0_001fpr_2023-02-28_20:21.csv  metrics_300x1000s_0_001fpr_2023-02-28_22:51.csv  metrics_300x1000s_0_001fpr_2023-03-01_09:00.csv  metrics_300x1000s_0_01fpr_2023-02-16_23:33.csv  metrics_300x1000s_0_01fpr_2023-02-27_19:20.csv  metrics_300x1000s_0_01fpr_2023-02-28_20:32.csv  metrics_300x1000s_0_01fpr_2023-03-01_09:11.csv  metrics_300x1000s_0_01fpr_huntress_2023-02-22_02:58.csv  metrics_300x1000s_0_1fpr_2023-02-16_23:37.csv  metrics_300x1000s_0_1fpr_2023-02-27_19:36.csv  metrics_300x1000s_0_1fpr_2023-02-28_20:43.csv  metrics_300x1000s_0_1fpr_2023-03-01_09:22.csv  metrics_300x1000s_0_1fpr_huntress_2023-02-22_11:01.csv  metrics_300x1000s_0_2fnr_2023-01-30_20:17.csv  metrics_300x1000s_0_2fnr_2023-01-30_20:27.csv  metrics_300x1000s_0_2fnr_2023-01-30_20:36.csv  metrics_300x1000s_0_2fnr_2023-02-17_16:25.csv  metrics_300x1000s_0_2fnr_2023-02-17_16:36.csv  metrics_300x1000s_0_2fnr_2023-02-17_16:48.csv  metrics_300x1000s_0_2fnr_2023-02-26_18:31.csv  metrics_300x1000s_0_2fnr_2023-02-26_18:39.csv  metrics_300x1000s_0_2fnr_2023-02-26_18:50.csv  metrics_300x1000s_0_2fnr_2023-02-26_19:05.csv  metrics_300x1000s_0_2fnr_2023-02-27_11:50.csv  metrics_300x1000s_0_2fnr_2023-02-27_11:56.csv  (+115 more)
notebooks/: basic_set_functions_wip.ipynb  proposed_nomenclature.ipynb
sample_data/: noisy_data.SC
sempervirens/: __init__.py  metrics.py  reconstructor.py
sempervirens-rs/: Cargo.toml
sempervirens-rs/examples/: file_prefixes.rs  paper_datasets.rs
sempervirens-rs/src/: file_prefixes.rs  lib.rs  main.rs
src/d02_processing/: CountBasedReconstructor.py  Separator.py  comparison.py  file_prefixes.py  huntress.py  main.py  metrics.py  remove_na.py
tests/: file_prefixes.py  huntress.py  main.py
